--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -67,9 +67,8 @@ body {
 .certificate-card,
 .achievement-card {
   width: 300px;
-  max-width: auto;
+  max-width: 100%;
   height: auto;
-  max-height: 320px;
   flex: 0 0 auto;
   margin-right: 20px;
   border: 2px solid #000;
@@ -81,9 +80,49 @@ body {
   flex-direction: column;
 }
 
-.certificate-card:hover,
-.achievement-card:hover {
-  transform: scale(1.05);
+.certificate-details,
+.achievement-details {
+  padding: 15px;
+  width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center children horizontally */
+  text-align: center;
+}
+
+.certificate-title,
+.achievement-title {
+  font-family: "Lexend", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  white-space: normal;
+  width: 100%;
+  max-width: 100%;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: center;
+}
+
+.certificate-description,
+.achievement-description {
+  font-family: "Lexend", sans-serif;
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 10px;
+  white-space: normal;
+  width: 100%;
+  max-width: 100%;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+  text-align: center;
 }
 
 .certificate-img,
@@ -103,39 +142,6 @@ body {
   overflow: hidden;
   display: flex;
   justify-content: center;
-}
-
-.certificate-details,
-.achievement-details {
-  align-items: center;
-  text-align: center;
-  padding: 15px;
-}
-
-.certificate-title,
-.achievement-title {
-  font-family: "Lexend", sans-serif;
-  font-size: 18px;
-  font-weight: 500;
-  margin-bottom: 10px;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.certificate-description,
-.achievement-description {
-  font-family: "Lexend", sans-serif;
-  font-size: 14px;
-  color: #666;
-  margin-bottom: 10px;
-  display: -webkit-box;
-  -webkit-line-clamp: 1;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 /* Modal Styles */
